--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -24,7 +24,7 @@
       </div>
 
       <button>
-        Create board
+        Add board
       </button>
     </form>
   </div>
@@ -33,53 +33,21 @@
 <hr>
 <div>
   <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
+  
+    
+  
+        <ul>
 
-        <th>
-          Name
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_boards.each do |a_board| %>
-      <tr>
-        <td>
-          <%= a_board.id %>
-        </td>
-
-        <td>
-          <%= a_board.name %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_board.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_board.updated_at) %> ago
-        </td>
-
-        <td>
+        <% @list_of_boards.each do |a_board| %>
+  
+        <li>
           <a href="/boards/<%= a_board.id %>">
-            Show details
+              <%= a_board.name %>
           </a>
-        </td>
-      </tr>
+        </li>
       <% end %>
-    </table>
+      </ul>
+  
   </div>
 </div>
 
